Fix Video Busting Out of Screen
This adds a max-width attribute to the video element so that it does not flow off the screen.

--- a/app/assets/stylesheets/global/_base.scss
+++ b/app/assets/stylesheets/global/_base.scss
@@ -169,6 +169,10 @@ iframe {
   max-width: 100%;
 }
 
+video {
+  max-width: 100%;
+}
+
 .video-wrapper {
   position: relative;
   width: 100%;
